fix: page transitions overlaps

--- a/components/ProductBuilder/ProductBuilder.module.scss
+++ b/components/ProductBuilder/ProductBuilder.module.scss
@@ -1,8 +1,15 @@
 @import "~styles/mixins";
 
 .container {
+}
+
+.pageContent {
+  position: relative;
   @include fill;
   @include column;
-  padding: 1.5rem 0 4rem 0;
   gap: 1rem;
+
+  & > * {
+    position: absolute;
+  }
 }
